<resources>
    <string name="app_name">Simple Calc</string>
    <string name="simple_calc">Simple Calc</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="x">X</string>
    <string name="division">/</string>
    <string name="equal_to">=</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="del">DEL</string>
    <string name="eight">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="_400">Output</string>
    <string name="multi">_multi</string>
    <string name="img">img</string>
</resources>